k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-platform-ingress
  namespace: data-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: local.data-platform.com
      http:
        paths:
          - path: /airflow
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
          - path: /fastapi
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 8001
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
